fixtures/cs-dec-01/bad/node-crypto-create-decipher.ts
import { createDecipher } from "node:crypto";

export function decrypt(data: Buffer, password: string) {
	return createDecipher("aes-256-cbc", password);
}
